--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg flex">
   <div class="container-fluid">
-    <a class="navbar-brand text-white fs-1 fw-bold"  routerLink="/home" >start Framework</a>
+    <a class="navbar-brand text-white fs-1 fw-bold"  routerLink="/home" >Start Framework</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
